--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -1,5 +1,5 @@
 .sidebar {
-  width: 25%;
+  width: 400px;
   background-color: #3b3b3b;
   display: flex;
   flex-direction: column;
@@ -22,6 +22,7 @@
 
 /* Top Menu */
 .top_menu {
+  height: 40px;
   display: flex;
   justify-content: space-between;
   align-items: center;
@@ -70,10 +71,10 @@
 
 /* Center Menu */
 .center_menu {
-  height: 700px;
+  flex: 1;
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 1px;
 }
 .center_menu .center_menu_list {
   width: 100%;
@@ -169,10 +170,9 @@
   background-color: #d5dde0;
 }
 .bottom_menu {
-  height: auto;
   display: flex;
   flex-direction: column;
-  gap: 2px;
+  gap: 1px;
   border-top: 1px solid #454545;
 }
 .light_mode .bottom_menu {
@@ -212,15 +212,15 @@
   text-align: center;
   display: flex;
   align-items: center;
-  font-size: 18px;
-  padding: 13px;
+  font-size: 16px;
+  padding: 12px;
 }
 .light_mode .bottom_menu_list i {
   color: #000;
 }
 .bottom_menu .bottom_menu_list h4 {
   color: white;
-  font-size: 12px;
+  font-size: 11px;
   font-weight: 400;
 }
 .light_mode .bottom_menu .bottom_menu_list h4 {
