--- a/src/components/TradeSection/TradeSection.css
+++ b/src/components/TradeSection/TradeSection.css
@@ -1,13 +1,12 @@
-.trade {
+.trade_section {
   background-color: var(--body_color);
+  /* background-color: purple; */
+  padding: 4px;
+  flex: 1;
 }
-.light_mode .trade {
+.light_mode .trade_section {
   background-color: white;
 }
-.trade .trade_section {
-  margin: 3px;
-}
-
 /* Trade Tabs */
 .trade_section .trade_tabs {
   display: flex;
@@ -46,15 +45,26 @@
 /* Search Section */
 .trade_section .search_section {
   display: flex;
+  align-items: center;
+  justify-content: center;
   gap: 5px;
+}
+@media (max-width: 420px) {
+  .trade_section .search_section {
+    flex-direction: column;
+  }
 }
 .search_section .search_field {
   height: 100%;
   position: relative;
   display: flex;
-  align-items: center;
   justify-content: center;
   margin-top: 5px;
+}
+@media (max-width: 420px) {
+  .search_section .search_field {
+    margin-top: 10px;
+  }
 }
 .search_section .search_field .search_input {
   width: 165px;
@@ -64,7 +74,13 @@
   padding: 3px 10px;
   border: none;
   outline: none;
+  position: relative;
   border-radius: var(--border_radius);
+}
+@media (max-width: 420px) {
+  .search_section .search_field .search_input {
+    width: 200px;
+  }
 }
 .light_mode .search_section .search_field .search_input {
   color: #000;
@@ -87,7 +103,7 @@
   color: #6f6f6f;
 }
 .search_section .symbols_search {
-  margin-top: 7px;
+  margin-top: 6px;
 }
 .symbols_search .symbols_ul {
   display: flex;
