--- a/src/index.css
+++ b/src/index.css
@@ -2,9 +2,9 @@
 
 :root {
   --main_color: #2980b9;
-  --buy_color: #219351;
-  --sell_color: #e74c3c;
-  --natural_color: #95a5a6;
+  --buy_color: #19b52e;
+  --sell_color: #ff6600;
+  --natural_color: #bfbfbf;
   --body_color: #292929;
   --main_transition: 0.2s;
   --border_radius: 4px;
