--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,15 @@
 .app {
+  width: 100%;
   height: 100vh;
+  display: flex;
+}
+.app .app_content {
+  display: flex;
+  flex-direction: column;
+  margin-right: 5px;
+  margin-left: 5px;
+}
+.app_content_details {
   display: flex;
 }
 
@@ -13,4 +23,29 @@
 .light_mode {
   background-color: white;
   color: black;
+}
+
+/* Change ScrollBar */
+::-webkit-scrollbar {
+  width: 10px;
+  background: #b8b8b8;
+  border-radius: 10px;
+}
+.light_mode ::-webkit-scrollbar {
+  background: rgb(241, 241, 241);
+}
+::-webkit-scrollbar-thumb {
+  background: #808080;
+  height: 50px;
+  border-radius: 10px;
+  cursor: pointer;
+}
+.light_mode ::-webkit-scrollbar-thumb {
+  background: #afbdc4;
+}
+::-webkit-scrollbar-thumb:hover {
+  background: #5b5b5b;
+}
+.light_mode ::-webkit-scrollbar-thumb:hover {
+  background: #8aa0aa;
 }
