--- a/src/components/TradeSection/TradeSection.css
+++ b/src/components/TradeSection/TradeSection.css
@@ -1,6 +1,6 @@
 .trade_section {
+  height: 70%;
   background-color: var(--body_color);
-  /* background-color: purple; */
   padding: 4px;
   flex: 1;
 }
