--- a/src/index.css
+++ b/src/index.css
@@ -2,8 +2,8 @@
 
 :root {
   --main_color: #2980b9;
-  --buy_color: #19b52e;
-  --sell_color: #ff6600;
+  --buy_color: #60d938;
+  --sell_color: #ed250e;
   --natural_color: #bfbfbf;
   --body_color: #292929;
   --main_transition: 0.2s;
