Finished Calendar Section

--- a/src/components/Autochartist/Autochartist.css
+++ b/src/components/Autochartist/Autochartist.css
@@ -15,3 +15,6 @@
   margin-right: 6px;
   border-radius: var(--border_radius);
 }
+.light_mode .autochartist .autochartist_section {
+  background-color: white;
+}
