--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -2,16 +2,177 @@
   width: 100%;
   height: 93%;
   background-color: #525252;
+  padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
 .light_mode .calendar {
   background-color: #d5dde0;
 }
+.calendar_content .calendar_dropdown {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  gap: 10px;
+  padding: 5px;
+  position: relative;
+}
+.calendar_dropdown .dropdown_btn {
+  width: 85%;
+  display: flex;
+  justify-content: space-between;
+  color: white;
+  background-color: #292929;
+  padding: 5px 10px;
+  border: none;
+  border-radius: var(--border_radius);
+  transition: var(--main_transition);
+  cursor: pointer;
+}
+.light_mode .calendar_dropdown .dropdown_btn {
+  color: black;
+  background-color: white;
+}
+.calendar_dropdown .dropdown_menu {
+  width: 83%;
+  background-color: #292929;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  position: absolute;
+  top: 33px;
+  left: 46px;
+  padding: 5px;
+  border: 1px solid #525252;
+  border-radius: var(--border_radius);
+  transition: var(--main_transition);
+  z-index: 50;
+}
+.light_mode .calendar_dropdown .dropdown_menu {
+  background-color: white;
+  border: 1px solid #bcbcbc;
+}
+.light_mode .calendar_dropdown .dropdown_menu {
+  background-color: white;
+}
+.dropdown_menu .dropdown_item {
+  font-size: 12px;
+  padding: 3px;
+  border-radius: var(--border_radius);
+  cursor: pointer;
+}
+.dropdown_menu .dropdown_item_active {
+  background-color: #525252;
+}
+.light_mode .dropdown_menu .dropdown_item_active {
+  background-color: #d5dde0;
+}
+.dropdown_menu .dropdown_item:hover {
+  background-color: #525252;
+}
+.light_mode .dropdown_menu .dropdown_item:hover {
+  background-color: #e2e6e7;
+}
 .calendar .calendar_section {
   width: calc(100% - 12px);
-  height: 99%;
+  height: 600px;
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
+  padding: 6px;
   border-radius: var(--border_radius);
+  overflow: auto;
+}
+.light_mode .calendar .calendar_section {
+  background-color: white;
+}
+.calendar_section .calendar_info {
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 6px;
+  cursor: pointer;
+}
+.calendar_section .calendar_info:hover {
+  background-color: #52525255;
+  border-radius: var(--border_radius);
+}
+.light_mode .calendar_section .calendar_info:hover {
+  background-color: #d5dde070;
+}
+.calendar_info .hr_bottom {
+  width: 100%;
+  height: 1px;
+  background-color: #525252;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+}
+.light_mode .calendar_info .hr_bottom {
+  background-color: #d5dde0;
+}
+.calendar_info .calendar_time_country {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 5px;
+}
+.calendar_time_country .calendar_time {
+  display: flex;
+  align-items: center;
+  gap: 5px;
+  font-size: 12px;
+}
+.calendar_time .time_icon {
+  color: green;
+}
+.calendar_time_country .calendar_country {
+  font-size: 12px;
+}
+.calendar_info .calendar_title {
+  font-size: 12px;
+  margin-bottom: 5px;
+  padding-left: 5px;
+}
+.calendar_info .calendar_details {
+  width: 100%;
+  display: flex;
+  justify-content: space-evenly;
+  gap: 10px;
+  margin-bottom: 6px;
+}
+.calendar_details .calendar_data {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  gap: 2px;
+}
+.calendar_details .calendar_data .progress_bar {
+  width: 100%;
+  font-size: 11px;
+  overflow: hidden;
+}
+.calendar_data .progress_bar .progress {
+  height: 20px;
+  background-color: #76c7c0;
+  padding: 3px;
+  border-radius: 3px;
+}
+.calendar_details .calendar_data .percent {
+  font-size: 11px;
+  padding: 3px;
+}
+.calendar_details .calendar_data .word {
+  color: #929292;
+  font-size: 11px;
+}
+.calendar_info .calendar_details .hr_side {
+  width: 1px;
+  /* height: 100%; */
+  background-color: #525252;
+  border: none;
+  outline: none;
+  border-radius: 2px;
+}
+.light_mode .calendar_details .hr_side {
+  background-color: #d5dde0;
 }
