Updated data for technical indicator section

--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -69,25 +69,27 @@
   justify-content: space-between;
   gap: 5px;
 }
-.tech_section .tech_values .values_signal {
+.tech_section .tech_values .data_values {
   display: flex;
   flex-direction: column;
   gap: 5px;
   padding-bottom: 8px;
   font-size: 12px;
 }
-.tech_section .values_signal .valueName {
+.tech_section .tech_values .chart_values {
   font-size: 12px;
+  text-align: right;
+  display: flex;
+  flex-direction: column;
+  gap: 5px;
+  padding-bottom: 8px;
 }
-.tech_section .values_signal .num_status {
-  font-size: 12px;
-}
-.tech_section .tech_values .data_values {
+.tech_section .tech_values .status_values {
   display: flex;
   flex-direction: column;
   gap: 5px;
 }
-.tech_section .tech_values .data_values p {
+.tech_section .tech_values .status_values p {
   font-size: 12px;
   text-align: right;
 }
