--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -120,13 +120,23 @@
   display: flex;
   align-items: center;
   gap: 5px;
-  font-size: 12px;
+  font-size: 11px;
 }
 .calendar_time .time_icon {
   color: green;
 }
 .calendar_time_country .calendar_country {
-  font-size: 12px;
+  display: flex;
+  gap: 10px;
+  font-size: 11px;
+}
+.calendar_country .country_currency {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
+.calendar_country .country_currency p:nth-child(2) {
+  color: #929292;
 }
 .calendar_info .calendar_title {
   font-size: 12px;
@@ -140,6 +150,9 @@
   gap: 10px;
   margin-bottom: 6px;
 }
+.calendar_details .importance {
+  text-align: center;
+}
 .calendar_details .calendar_data {
   display: flex;
   flex-direction: column;
@@ -149,6 +162,8 @@
 .calendar_details .calendar_data .progress_bar {
   width: 100%;
   font-size: 11px;
+  display: flex;
+  justify-content: center;
   overflow: hidden;
 }
 .calendar_data .progress_bar .progress {
@@ -167,7 +182,6 @@
 }
 .calendar_info .calendar_details .hr_side {
   width: 1px;
-  /* height: 100%; */
   background-color: #525252;
   border: none;
   outline: none;
