--- a/src/components/RSide_Symbol/RSide_Symbol.css
+++ b/src/components/RSide_Symbol/RSide_Symbol.css
@@ -2,19 +2,48 @@
   width: 100%;
   height: 93%;
   background-color: #525252;
+  padding-bottom: 15px;
   border-radius: 0 4px 4px 4px;
 }
 .light_mode .rSide_symbol {
   background-color: #d5dde0;
 }
+.rSide_symbol .rSide_content {
+  padding-top: 35px;
+}
 .rSide_symbol .rSide_section {
   width: calc(100% - 12px);
-  height: 99%;
+  height: 600px;
+  display: flex;
+  justify-content: space-between;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
+  padding: 6px;
   border-radius: var(--border_radius);
+  overflow: auto;
 }
 .light_mode .rSide_symbol .rSide_section {
   background-color: white;
+}
+.rSide_symbol .rSide_section .symbol_data_name {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.rSide_section .symbol_data_name .data_name_p {
+  color: #c3c3c3;
+  font-size: 13px;
+}
+.light_mode .symbol_data_name .data_name_p {
+  color: black;
+}
+.rSide_symbol .rSide_section .symbol_data_value {
+  display: flex;
+  flex-direction: column;
+  align-items: end;
+  gap: 10px;
+}
+.rSide_section .symbol_data_value .data_value_p {
+  font-size: 13px;
 }
