--- a/src/components/Calendar/Calendar.css
+++ b/src/components/Calendar/Calendar.css
@@ -8,73 +8,74 @@
 .light_mode .calendar {
   background-color: #d5dde0;
 }
-.calendar_content .calendar_dropdown {
+.calendar .calendar_tabs {
   display: flex;
   justify-content: center;
-  align-items: center;
-  gap: 10px;
-  padding: 5px;
-  position: relative;
+  gap: 3px;
+  padding: 6px;
+  border-radius: 0 4px 4px 4px;
 }
-.calendar_dropdown .dropdown_btn {
-  width: 85%;
-  display: flex;
-  justify-content: space-between;
-  color: white;
-  background-color: #292929;
-  padding: 5px 10px;
-  border: none;
-  border-radius: var(--border_radius);
-  transition: var(--main_transition);
+.calendar .calendar_tabs .calendar_tab {
+  font-size: 11px;
+  color: #d1d1d1;
+  background-color: #6b6b6b;
+  text-align: center;
+  padding: 4px;
   cursor: pointer;
 }
-.light_mode .calendar_dropdown .dropdown_btn {
+.light_mode .calendar_tabs .calendar_tab {
+  color: #52536e;
+  background-color: #edf0f2;
+}
+.calendar .calendar_tabs .calendar_tab:hover {
+  color: white;
+  background-color: #808080;
+}
+.light_mode .calendar_tabs .calendar_tab:hover {
+  color: black;
+  background-color: #f6f6f6;
+}
+.calendar .calendar_tabs .calendar_tab_active {
+  color: white;
+  background-color: #3b3b3b;
+}
+.calendar .calendar_tabs .calendar_tab_active:hover {
+  color: white;
+  background-color: #3b3b3b;
+}
+.light_mode .calendar_tabs .calendar_tab_active {
   color: black;
   background-color: white;
 }
-.calendar_dropdown .dropdown_menu {
-  width: 83%;
-  background-color: #292929;
+.calendar_tabs .calendar_tab_active:hover {
+  color: white;
+  background-color: #3b3b3b;
+}
+.light_mode .calendar_tabs .calendar_tab_active:hover {
+  color: black;
+  background-color: white;
+}
+.calendar_content .importance_filter {
   display: flex;
-  flex-direction: column;
-  gap: 6px;
-  position: absolute;
-  top: 33px;
-  left: 46px;
-  padding: 5px;
-  border: 1px solid #525252;
-  border-radius: var(--border_radius);
-  transition: var(--main_transition);
-  z-index: 50;
+  justify-content: center;
+  gap: 1px;
 }
-.light_mode .calendar_dropdown .dropdown_menu {
-  background-color: white;
-  border: 1px solid #bcbcbc;
-}
-.light_mode .calendar_dropdown .dropdown_menu {
-  background-color: white;
-}
-.dropdown_menu .dropdown_item {
-  font-size: 12px;
-  padding: 3px;
-  border-radius: var(--border_radius);
+.calendar_content .importance_filter label {
+  font-size: 13px;
+  display: flex;
+  align-items: center;
+  gap: 3px;
+  padding: 4px 3px 5px;
   cursor: pointer;
 }
-.dropdown_menu .dropdown_item_active {
-  background-color: #525252;
-}
-.light_mode .dropdown_menu .dropdown_item_active {
-  background-color: #d5dde0;
-}
-.dropdown_menu .dropdown_item:hover {
-  background-color: #525252;
-}
-.light_mode .dropdown_menu .dropdown_item:hover {
-  background-color: #e2e6e7;
+.calendar_content .importance_filter label input {
+  order: 1;
+  cursor: pointer;
 }
 .calendar .calendar_section {
   width: calc(100% - 12px);
-  height: 600px;
+  max-height: 100%;
+  height: 580px;
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
@@ -93,7 +94,7 @@
   cursor: pointer;
 }
 .calendar_section .calendar_info:hover {
-  background-color: #52525255;
+  background-color: #8f8f8f55;
   border-radius: var(--border_radius);
 }
 .light_mode .calendar_section .calendar_info:hover {
@@ -123,7 +124,7 @@
   font-size: 11px;
 }
 .calendar_time .time_icon {
-  color: green;
+  color: var(--main_color);
 }
 .calendar_time_country .calendar_country {
   display: flex;
@@ -140,7 +141,8 @@
 }
 .calendar_info .calendar_title {
   font-size: 12px;
-  margin-bottom: 5px;
+  color: gold;
+  margin-bottom: 7px;
   padding-left: 5px;
 }
 .calendar_info .calendar_details {
