--- a/src/components/Login_Register/Login_Register.css
+++ b/src/components/Login_Register/Login_Register.css
@@ -1,47 +1,25 @@
-.form_switcher {
-  display: flex;
-  justify-content: center;
-  gap: 20px;
-  margin-top: 20px;
-  margin-bottom: 20px;
-}
-.form_switcher button {
-  color: white;
-  background-color: #545454;
-  font-size: 16px;
-  padding: 10px 30px;
-  border-radius: 4px;
-  border: none;
-  cursor: pointer;
-}
-.light_mode .form_switcher button {
-  color: #40484d;
-  background-color: #e8ebed;
-}
-.form_switcher button:hover {
-  background-color: #6464646d;
-}
-.light_mode .form_switcher button:hover {
-  background-color: #d5d5d5a0;
-}
-.navbar_login .form_switcher button.active {
-  background-color: var(--main_color);
-}
-.light_mode .navbar_login .form_switcher button.active {
-  color: white;
-}
-.light_mode .navbar_login .form_switcher button.active:hover {
-  background-color: var(--main_color);
-}
-.navbar_login .login_form,
-.navbar_login .signup_form {
+.login_form,
+.signup_form {
   width: 100%;
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
   padding: 20px;
+}
+.form_header {
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  margin-top: 20px;
+}
+.form_header .form_icon {
+  color: var(--main_color);
+  font-size: 60px;
+  padding-bottom: -30px;
 }
 .navbar_login .login_form h1,
 .navbar_login .signup_form h1 {
-  display: flex;
-  justify-content: center;
   color: white;
   margin-bottom: 20px;
   text-transform: uppercase;
@@ -83,16 +61,17 @@
 .navbar_login form button {
   width: 100px;
   color: white;
-  background-color: var(--main_color);
+  background-image: linear-gradient(120deg, #32e9f6 0%, #1a6bdc 100%);
   margin: 20px auto 0px auto;
   padding: 10px 25px;
   border: none;
   outline: none;
   border-radius: 25px;
+  transition: var(--main_transition);
   cursor: pointer;
 }
 .navbar_login form button:hover {
-  background-color: #216694;
+  background-image: linear-gradient(120deg, #1a6bdc 0%, #32e9f6 100%);
 }
 .navbar_login .login_span {
   font-size: 14px;
