--- a/src/components/Modal_login/Modal_login.css
+++ b/src/components/Modal_login/Modal_login.css
@@ -12,19 +12,32 @@
 }
 .modal_overlay .modal_content {
   max-width: 80%;
-  width: 400px;
+  width: 420px;
   background-color: #292929;
-  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
   padding: 20px;
   border-radius: 8px;
   position: relative;
+  border: 1px solid #525252;
+  box-shadow: 0 2px 10px rgba(0, 0, 0, 0.1);
 }
 .light_mode .modal_overlay .modal_content {
   background-color: white;
 }
-.modal_overlay .modal_content .close_btn {
+.modal_overlay .modal_content .close_btn_div {
+  width: 100%;
+  height: 30px;
+  background-color: #525252;
   position: absolute;
-  top: 5px;
+  top: 0;
+  left: 0;
+  border-radius: 8px 8px 0px 0px;
+}
+.light_mode .modal_overlay .modal_content .close_btn_div {
+  background-color: #d5dde0;
+}
+.modal_content .close_btn_div .close_btn {
+  position: absolute;
+  top: 0px;
   right: 10px;
   color: #c2c2c2;
   background: none;
@@ -33,5 +46,5 @@
   cursor: pointer;
 }
 .light_mode .modal_content .close_btn {
-  color: #575a5c;
+  color: #363839;
 }
