--- a/src/components/Patterns/Patterns.css
+++ b/src/components/Patterns/Patterns.css
@@ -24,50 +24,57 @@
 .light_mode .patterns .patterns_section {
   background-color: white;
 }
-.patterns_section .patterns_div {
-  width: 100%;
-  display: flex;
-  flex-direction: column;
-}
-.patterns_section .patterns_div .patterns_info {
+.patterns_section .patterns_info {
   display: flex;
   justify-content: space-between;
+  padding: 5px;
+  cursor: pointer;
 }
-.patterns_div .patterns_info .patterns_header {
+.patterns_section .patterns_info:hover {
+  background-color: #8f8f8f55;
+}
+.patterns_section .patterns_info .patterns_group {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+.patterns_section .patterns_info .patterns_info_div {
+  display: flex;
+  flex-direction: column;
+  gap: 2px;
+}
+.patterns_section .patterns_info_div .patterns_header {
+  width: 120px;
+  color: #a6a6a6;
   font-size: 12px;
 }
-.patterns_section .patterns_div hr {
+.patterns_info_div .strength {
+  display: flex;
+  /* justify-content: space-between; */
+  align-items: center;
+  gap: 3px;
+}
+.patterns_info_div .strength .strength_bar {
+  height: 15px;
+  background-color: var(--main_color);
+  margin: 5px 0;
+}
+.light_mode .patterns_section .patterns_info_div .patterns_header {
+  color: rgb(36, 36, 36);
+}
+.patterns_section .patterns_info_div .patterns_value {
+  font-size: 12px;
+}
+.patterns_info .patterns_value_side {
+  font-size: 12px;
+  text-align: center;
+  writing-mode: vertical-rl;
+  transform: rotate(180deg);
+}
+.patterns_section hr {
   width: 100%;
   height: 1px;
   background-color: #525252;
-  margin-top: 4px;
-  margin-bottom: 4px;
   border: none;
-}
-.patterns_div .patterns_details {
-  display: flex;
-  justify-content: space-between;
-}
-.patterns_div .patterns_details .patterns_value {
-  font-size: 12px;
-  margin-top: 10px;
-}
-.patterns_div .patterns_details .patterns_value1 {
-  width: 50px;
-}
-.patterns_div .patterns_details .patterns_value2 {
-  width: 40px;
-}
-.patterns_div .patterns_details .patterns_value3 {
-  width: 90px;
-  font-size: 11px;
-  text-align: left;
-}
-.patterns_div .patterns_details .patterns_value4 {
-  width: 60px;
-  text-align: right;
-}
-.patterns_div .patterns_details .patterns_value5 {
-  width: 20px;
-  text-align: right;
+  outline: none;
 }
