--- a/src/components/RSide_Symbol/RSide_Symbol.css
+++ b/src/components/RSide_Symbol/RSide_Symbol.css
@@ -13,9 +13,8 @@
 }
 .rSide_symbol .rSide_section {
   width: calc(100% - 12px);
+  max-height: 100%;
   height: 600px;
-  display: flex;
-  justify-content: space-between;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
@@ -23,27 +22,33 @@
   border-radius: var(--border_radius);
   overflow: auto;
 }
+.rSide_symbol .rSide_section hr {
+  width: 100%;
+  height: 1px;
+  background-color: #525252;
+  margin-top: 3px;
+  border: none;
+  outline: none;
+}
 .light_mode .rSide_symbol .rSide_section {
   background-color: white;
 }
-.rSide_symbol .rSide_section .symbol_data_name {
+.rSide_symbol .rSide_section .symbol_data {
   display: flex;
   flex-direction: column;
-  gap: 10px;
+  gap: 4px;
 }
-.rSide_section .symbol_data_name .data_name_p {
-  color: #c3c3c3;
-  font-size: 13px;
-}
-.light_mode .symbol_data_name .data_name_p {
-  color: black;
-}
-.rSide_symbol .rSide_section .symbol_data_value {
+.rSide_symbol .rSide_section .symbol_data_div {
   display: flex;
-  flex-direction: column;
-  align-items: end;
-  gap: 10px;
+  justify-content: space-between;
 }
-.rSide_section .symbol_data_value .data_value_p {
+.rSide_section .symbol_data_div .data_name {
+  font-size: 14px;
+  color: #a5a5a5;
+}
+.light_mode .rSide_section .symbol_data_div .data_name {
+  color: #212121;
+}
+.rSide_section .symbol_data_div .data_value {
   font-size: 13px;
 }
