--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -70,11 +70,12 @@
   justify-content: space-between;
 }
 .tech_section .tech_values .data_values {
+  font-size: 12px;
   display: flex;
   flex-direction: column;
   gap: 10px;
   padding-bottom: 8px;
-  font-size: 12px;
+  z-index: 10;
 }
 .tech_section .tech_values .chart_values {
   display: flex;
@@ -82,7 +83,7 @@
   gap: 13px;
 }
 .tech_values .value_bar_container {
-  width: 130px;
+  width: 90px;
   height: 11px;
   position: relative;
 }
@@ -113,6 +114,7 @@
   display: flex;
   flex-direction: column;
   gap: 10px;
+  z-index: 10;
 }
 .tech_section .tech_values .status_values p {
   font-size: 12px;
