--- a/src/components/AllSymbols/AllSymbols.css
+++ b/src/components/AllSymbols/AllSymbols.css
@@ -9,6 +9,37 @@
   gap: 6px;
   margin-right: 6px;
 }
+.popular .popular_section {
+  width: 100%;
+  display: flex;
+  align-items: center;
+  background-color: #525252;
+  padding: 6px 0px 6px 10px;
+  border-radius: var(--border_radius);
+  cursor: pointer;
+}
+.light_mode .popular .popular_section {
+  background-color: #d5dde0;
+}
+.popular .popular_section i {
+  color: #cccccc;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  transition: var(--main_transition);
+}
+.light_mode .popular .popular_section i {
+  color: #4a4d4f;
+}
+.popular .popular_section:hover i {
+  color: white;
+}
+.light_mode .popular .popular_section:hover i {
+  color: #000;
+}
+.popular .popular_section p {
+  font-size: 11px;
+}
 .symbol .category_symbol {
   display: flex;
   flex-direction: column;
