--- a/src/components/News/News.css
+++ b/src/components/News/News.css
@@ -13,7 +13,7 @@
 }
 .news .news_section {
   width: calc(100% - 12px);
-  height: 600px;
+  height: 94%;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
