--- a/src/components/RSide_Symbol/RSide_Symbol.css
+++ b/src/components/RSide_Symbol/RSide_Symbol.css
@@ -13,8 +13,7 @@
 }
 .rSide_symbol .rSide_section {
   width: calc(100% - 12px);
-  max-height: 100%;
-  height: 600px;
+  height: 94%;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
