--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -24,13 +24,13 @@
   text-align: center;
   padding: 6px;
 }
-.tech_tabs .tech_tab:hover {
-  color: white;
-  background-color: #808080;
-}
 .light_mode .tech_tabs .tech_tab {
   color: #52536e;
   background-color: #edf0f2;
+}
+.tech_tabs .tech_tab:hover {
+  color: white;
+  background-color: #808080;
 }
 .light_mode .tech_tabs .tech_tab:hover {
   color: black;
@@ -54,8 +54,7 @@
 }
 .tech_section {
   width: calc(100% - 12px);
-  max-height: 93.5%;
-  height: 600px;
+  height: 94%;
   background-color: #292929;
   margin-left: 6px;
   margin-right: 6px;
