--- a/src/components/AllSymbols/AllSymbols.css
+++ b/src/components/AllSymbols/AllSymbols.css
@@ -1,13 +1,101 @@
-.symbol {
-  height: 350px;
-  margin-top: 7px;
-  overflow: auto;
+/* Search Section */
+.search_section {
+  width: 100%;
+  display: flex;
+  align-items: baseline;
+  gap: 5px;
 }
+.search_section .search_field {
+  height: 100%;
+  position: relative;
+  display: flex;
+  justify-content: center;
+  margin-top: 5px;
+}
+.search_section .search_field .search_input {
+  width: 100%;
+  color: #bababa;
+  background-color: #1a1a1a;
+  font-size: 11px;
+  padding: 3px 8px;
+  border: none;
+  outline: none;
+  position: relative;
+  border-radius: var(--border_radius);
+}
+.light_mode .search_section .search_field .search_input {
+  color: #000;
+  background-color: #e6ebed;
+}
+.search_section .search_field .search_input::placeholder {
+  font-size: 10px;
+}
+.search_field .search_input::-webkit-search-cancel-button {
+  appearance: none;
+}
+.search_section .search_field i {
+  color: #bababa;
+  position: absolute;
+  right: 2px;
+  top: 2px;
+  cursor: pointer;
+}
+.light_mode .search_section .search_field i {
+  color: #6f6f6f;
+}
+.symbols_search .symbols_ul {
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  gap: 2px;
+}
+.symbols_ul .symbols_li {
+  color: #bababa;
+  font-size: 9px;
+  padding: 2px;
+  cursor: pointer;
+  border-radius: var(--border_radius);
+}
+.symbols_ul .symbols_active {
+  color: white;
+  background-color: #4a4a4a;
+}
+.light_mode .symbols_ul .symbols_li {
+  color: #2a2a2a;
+  background-color: #ebebeb;
+}
+.symbols_ul .symbols_li:hover {
+  background-color: #4a4a4a;
+}
+.light_mode .symbols_ul .symbols_li:hover {
+  background-color: #d8d8d8;
+}
+.market_section .data_header {
+  width: 100%;
+  background-color: #a3a3a3;
+  display: flex;
+  justify-content: flex-end;
+  gap: 10px;
+  padding: 4px 33px 4px 0px;
+  margin-top: 6px;
+}
+.light_mode .market_section .data_header {
+  background-color: #d5dde0;
+}
+.market_section .data_header .data_header_p {
+  color: #2c2c2c;
+  font-size: 11px;
+  text-align: right;
+  font-weight: bold;
+}
+
 .symbol .symbol_section {
+  height: 350px;
   display: flex;
   flex-direction: column;
   gap: 6px;
-  margin-right: 6px;
+  margin-top: 6px;
+  overflow: auto;
 }
 .popular .popular_section {
   width: 100%;
