--- a/src/components/RSide_Symbol/RSide_Symbol.css
+++ b/src/components/RSide_Symbol/RSide_Symbol.css
@@ -13,7 +13,8 @@
 }
 .rSide_symbol .rSide_section {
   width: calc(100% - 12px);
-  height: 94%;
+  max-height: 100%;
+  height: 600px;
   background-color: #292929;
   margin-right: 6px;
   margin-left: 6px;
