--- a/src/components/RightSide/RightSide.css
+++ b/src/components/RightSide/RightSide.css
@@ -10,6 +10,7 @@
 }
 .right_side .tabs .tab {
   font-size: 11px;
+  font-weight: 500;
   color: #bababa;
   background-color: #3b3b3b;
   padding: 6px;
