--- a/src/components/Sidebar/Sidebar.css
+++ b/src/components/Sidebar/Sidebar.css
@@ -105,6 +105,7 @@
 .dropdown_menu .dropdown_group img {
   width: 20px;
   height: 20px;
+  cursor: pointer;
 }
 .lang_dropdown .dropdown_group .dropdown_tab {
   color: #d1d1d1;
