--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -14,15 +14,16 @@
   gap: 3px;
   padding: 5px;
   border-radius: 0 4px 4px 4px;
-  cursor: pointer;
 }
 .tech_tabs .tech_tab {
   width: 100%;
   color: #d1d1d1;
   background-color: #6b6b6b;
   font-size: 11px;
+  font-weight: 500;
   text-align: center;
   padding: 6px;
+  cursor: pointer;
 }
 .light_mode .tech_tabs .tech_tab {
   color: #52536e;
