--- a/src/components/MovingAverage/MovingAverage.css
+++ b/src/components/MovingAverage/MovingAverage.css
@@ -102,3 +102,14 @@
   border-radius: 12px;
   color: white;
 }
+.moving_section hr {
+  width: 100%;
+  height: 1px;
+  background-color: #525252;
+  margin-top: 3px;
+  border: none;
+  outline: none;
+}
+.light_mode .moving_section hr {
+  background-color: #d5dde0;
+}
