--- a/src/components/Technical_Indicator/Tech_Section.css
+++ b/src/components/Technical_Indicator/Tech_Section.css
@@ -120,3 +120,15 @@
   font-size: 12px;
   text-align: right;
 }
+.tech_section .tech_chart {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  margin-top: 10px;
+}
+.tech_section .tech_chart span {
+  color: white;
+  font-weight: 500;
+  padding: 8px;
+  border-radius: 15px;
+}
